<resources>
    <string name="app_name">Resource+</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="save">Save</string>
    <string name="saving_image">Saving image</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>
    <string name="connection_unavailable">Connection issue! kindly check your internet connection</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">Error</string>
    <string name="_9_15_am">9:15 AM</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="change_photo">Change Photo</string>
    <string name="change_about">Change About</string>
    <string name="change_name">Change Name</string>
    <string name="switch_account">Switch Account</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="participants_1_256">Participants : 1/256</string>
    <string name="search">Search</string>
    <string name="mb">%.2f MB</string>
    <string name="stringCon">\@%1$s</string>
    <string name="zero_time">00:00</string>
    <string name="about_and_phone_number">About and phone number</string>
    <string name="groups_in_common">Groups in common</string>
    <string name="block">Block</string>
    <string name="add_group_description">Add group description</string>
    <string name="no_participant">No Participant</string>
    <string name="exit_group">Exit group</string>
    <string name="no_group">No Group</string>
    <string name="title">Title</string>
    <string name="no_media">No Media</string>
    <string name="username">Username</string>
    <string name="enter_new_subject">Enter new Title/Name</string>
    <string name="subject">Title...</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="the_group_description_is_visible_to_participants_of_this_group_and_people_invited_to_this_group">The group description is visible to participants of this group and people invited to this group.</string>
    <string name="add_participants">Add participants</string>
    <string name="invite_via_link">Invite via link</string>
    <string name="hello">Hello,</string>
    <string name="welcome_nto_resource">Welcome \nTo Resource+</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="please_read_term_amp_condition_before_continuing"><![CDATA[Please read term & condition before continuing.]]></string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_your_full_name">Enter Your Full Name</string>
    <string name="referral_number">Referral Number</string>
    <string name="submit">Submit</string>
    <string name="image">Image</string>
    <string name="_92_123_4567890">+92 123 4567890</string>
    <string name="phone_number">Phone Number</string>
    <string name="mark_zinger_burger">Mark Zinger Burger</string>
    <string name="everything_is_possible">Everything is possible...</string>
    <string name="about">About</string>

    <!--    <string name="host">10.1.3.33</string>-->
    <string name="host">51.89.165.55</string>
    <string name="port">3002</string>
    <string name="contacts_button">contacts_button</string>
    <string name="picture">picture</string>

    <string name="vw_confirm">Done</string>
    <string name="vw_no_video_play_app">No App exists for playing video!</string>
    <string name="vw_record_audio">Record Audio</string>
    <string name="vw_rationale_storage">Need Reading Storage Permission for Picking Files</string>
    <string name="vw_up_to_max">Already up to max</string>
    <string name="vw_no_photo_app">No photo App in this phone!</string>
    <string name="vw_no_audio_play_app">No App exists for playing audio!</string>
    <string name="vw_no_video_app">No video App in this phone!</string>
    <string name="vw_no_audio_app">No audio App in this phone!</string>
    <string name="vw_all">All</string>
    <string name="profile_picture">profile_picture</string>
    <string name="splash">splash</string>
    <string name="add_image">add_image</string>

</resources>