<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="group_edit"
            type="com.mr_w.resourceplus.fragments.group_edit.GroupEditViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".fragments.group_edit.GroupEditFragment">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/bg"
            android:gravity="center_vertical"
            android:padding="@dimen/_15sdp"
            android:text="@string/enter_new_subject"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <View
            android:id="@+id/div"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_below="@id/header"
            android:background="#21ffffff" />

        <LinearLayout
            android:id="@+id/subjectEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/div"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.mr_w.resourceplus.supernova_emoji.helper.EmojiconEditText
                        android:id="@+id/subject"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/subject"
                        android:importantForAutofill="no"
                        android:padding="@dimen/_10sdp"
                        android:selectAllOnFocus="true"
                        android:textColor="@color/gb"
                        android:textColorHint="@color/gb"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:id="@+id/count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:text="0"
                        android:textColor="@color/gb"
                        android:textSize="@dimen/_9ssp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/primary" />

            </LinearLayout>

            <ImageView
                android:id="@+id/emoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:contentDescription="@string/error"
                android:src="@drawable/smiley"
                app:tint="@color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/subjectEditText"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/the_group_description_is_visible_to_participants_of_this_group_and_people_invited_to_this_group"
            android:textColor="@color/gb"
            android:textSize="@dimen/_11ssp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="#21ffffff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cancel"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/gb"
                    android:textSize="@dimen/_11ssp" />

                <View
                    android:layout_width="@dimen/_1sdp"
                    android:layout_height="match_parent"
                    android:background="#21ffffff" />

                <TextView
                    android:id="@+id/done"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/ok"
                    android:textColor="@color/gb"
                    android:textSize="@dimen/_11ssp" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</layout>