<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="start_fragment"
            type="com.mr_w.resourceplus.fragments.start_fragment.StartViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.start_fragment.StartFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/top_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    style="@style/Widget.MaterialComponents.Toolbar.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/actionBarSize" />

            </com.google.android.material.appbar.AppBarLayout>

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="@dimen/_85sdp"
                android:layout_height="@dimen/_85sdp"
                android:layout_marginTop="@dimen/_22sdp"
                android:src="@drawable/app_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/top_bar" />

            <TextView
                android:id="@+id/helloView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_13sdp"
                android:text="@string/hello"
                android:textColor="@color/primary"
                android:textSize="@dimen/_28ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/app_logo" />

            <TextView
                android:id="@+id/welcomeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_22sdp"
                android:text="@string/welcome_nto_resource"
                android:textColor="@color/primary"
                android:textSize="@dimen/_28ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/helloView" />

            <LinearLayout
                android:id="@+id/termsNdCondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_22sdp"
                android:layout_marginEnd="@dimen/_22sdp"
                android:background="@color/lightGrey"
                android:clickable="true"
                android:divider="@drawable/divider"
                android:focusable="true"
                android:orientation="horizontal"
                android:showDividers="beginning"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcomeView">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{start_fragment::OnClickTermsNConditions}"
                    android:paddingStart="@dimen/_7sdp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/terms_amp_conditions"
                    android:textColor="@color/primary"
                    android:textColorHighlight="#f00"
                    android:textColorLink="@color/black"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/paragraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginEnd="@dimen/_22sdp"
                android:text="@string/please_read_term_amp_condition_before_continuing"
                android:textColor="@color/primary"
                android:textColorHighlight="#f00"
                android:textColorLink="@color/black"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/termsNdCondition" />

            <Button
                android:id="@+id/btnStartSubmit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9sdp"
                android:layout_marginEnd="@dimen/_22sdp"
                android:backgroundTint="@color/primary"
                android:letterSpacing="0.2"
                android:onClick="@{start_fragment::OnClickSubmit}"
                android:text="Get Started"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/paragraph" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>