<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="profile"
            type="com.mr_w.resourceplus.activities.profile_activity.ProfileViewModel" />

        <variable
            name="imageUrl"
            type="String" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_smoke"
        tools:context=".activities.profile_activity.ProfileActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                app:contentInsetEnd="@dimen/_10sdp"
                app:contentInsetStart="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/btn_back_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/error"
                        android:onClick="@{profile::onBack}"
                        android:padding="@dimen/_3sdp"
                        android:src="@drawable/ic_arrow_back" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_3sdp"
                        android:text="Profile"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold" />

                </LinearLayout>

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/top_bar">

            <RelativeLayout
                android:id="@+id/r_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/imageCard"
                    android:layout_width="@dimen/_115sdp"
                    android:layout_height="@dimen/_115sdp"
                    app:cardCornerRadius="@dimen/_63sdp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:id="@+id/image_profile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:profileImage="@{imageUrl}" />

                </androidx.cardview.widget.CardView>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/imageCard"
                    android:layout_alignBottom="@id/imageCard"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/white"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/add_image"
                    android:elevation="1dp"
                    android:fadingEdge="none"
                    android:onClick="@{profile::clickFab}"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_view_eye"
                    android:tint="@color/primary"
                    app:fabSize="mini" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutChangeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/layout1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:gravity="bottom"
                android:paddingStart="@dimen/_18sdp"
                android:paddingEnd="@dimen/_18sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="Full name"
                android:textAllCaps="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/_18sdp"
                android:paddingEnd="@dimen/_18sdp"
                android:text="@{profile.name}"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutChangeNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/layoutChangeName">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:gravity="bottom"
                android:paddingStart="@dimen/_18sdp"
                android:paddingEnd="@dimen/_18sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/phone_number"
                android:textAllCaps="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/et_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/_18sdp"
                android:paddingEnd="@dimen/_18sdp"
                android:text="@{profile.phoneNumber}"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutChangeAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/layoutChangeNumber">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:gravity="bottom"
                android:paddingStart="@dimen/_18sdp"
                android:paddingEnd="@dimen/_18sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/about"
                android:textAllCaps="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/et_about"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/_18sdp"
                android:paddingEnd="@dimen/_18sdp"
                android:text="@{profile.about}"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
